@@ -105,6 +105,7 @@ public class CreateCalendarTables extends AbstractCreateTableImpl {
         + "INDEX (cid, timestampfield01),"
         + "INDEX (cid, timestampfield02),"
         + "INDEX `uidIndex` (cid, uid(255))"
+        + "INDEX `changingDateIndex` (cid, changing_date)"
         + ") ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci;";
 
     /**
@@ -189,6 +190,7 @@ public class CreateCalendarTables extends AbstractCreateTableImpl {
         + "INDEX (cid, timestampfield01),"
         + "INDEX (cid, timestampfield02),"
         + "INDEX `uidIndex` (cid, uid(255))"
+        + "INDEX `changingDateIndex` (cid, changing_date)"
         + ") ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci;";
 
     /**
