@@ -551,3 +551,6 @@ com.openexchange.groupware.update.tasks.DeleteOldYahooSubscriptions
 
 # Extende folder tables by "meta" JSON BLOB
 !com.openexchange.groupware.update.tasks.AddMetaForOXFolderTable
+
+# Adds (cid,changing_date) index to calendar tables if missing
+!com.openexchange.groupware.update.tasks.CalendarAddChangingDateIndexTask
