@@ -1,3 +1,7 @@
+* 2014-03-03 - tobias.friedrich@open-xchange.com
+
+- Fix for bug 31258: Add (cid,changing_date) index to calendar tables to speed up change detection 
+
 * 2014-03-01 - thorben.betten@open-xchange.com
 
  - Fix for bug 30701: Signal proper "Content-Length" in case "off"/"len" parameters were specified
